--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,28 +1,65 @@
 {
+
+    "version": "2.0.0",
+    
     "tasks": [
-        {
-            "type": "cppbuild",
-            "label": "C/C++: gcc 활성 파일 빌드",
-            "command": "/usr/bin/gcc",
-            "args": [
-                "-fdiagnostics-color=always",
-                "-g",
-                "${file}",
-                "-o",
-                "${fileDirname}/${fileBasenameNoExtension}"
-            ],
-            "options": {
-                "cwd": "${fileDirname}"
-            },
-            "problemMatcher": [
-                "$gcc"
-            ],
-            "group": {
-                "kind": "build",
-                "isDefault": true
-            },
-            "detail": "디버거에서 생성된 작업입니다."
-        }
+    
+    {
+    
+    "label": "build & run", //It's name of the task , you can have several tasks
+    
+    "type": "shell", //type can be either 'shell' or 'process' , more details will be given below
+    
+    "command": "g++",
+    
+    "args": [
+    
+    "-g", //gnu debugging flag , only necessary if you want to perform debugging on file
+    
+    "${file}", //${file} gives full path of the file
+    
+    "-o",
+    
+    "${workspaceFolder}\\build\\${fileBasenameNoExtension}", //output file name
+    
+    "&&", //to join building and running of the file
+    
+    "${workspaceFolder}\\build\\${fileBasenameNoExtension}"
+    
     ],
-    "version": "2.0.0"
-}
+    
+    "group": {
+    
+    "kind": "build", //defines to which group the task belongs
+    
+    "isDefault": true
+    
+    },
+    
+    "presentation": {
+    
+    //Explained in detail below
+    
+    "echo": false,
+    
+    "reveal": "always",
+    
+    "focus": true,
+    
+    "panel": "shared",
+    
+    "clear": false,
+    
+    "showReuseMessage": false
+    
+    },
+    
+    "problemMatcher": "$gcc"
+    
+    }
+    
+    ]
+    
+    }
+    
+    
